oris/backend/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
  labels:
    app: angular
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: armdocker.rnd.ericsson.se/proj-eric-oss-dev-test/doda-backend-setup:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: eiapregsecret # Name of the secret created
