oris/backend/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - host: django.ews.gic.ericsson.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
  tls:
    - hosts:
        - django.ews.gic.ericsson.se
      secretName: django-cert
